--- a/src/components/credit/Credit.css
+++ b/src/components/credit/Credit.css
@@ -1,11 +1,17 @@
 .tmdb-powered-by {
-  width: 100%;
-  margin: 1vh 0;
-  padding: 3vh 0;
   background-color: #0d253f;
   color: #90cea1;
 }
 
 .tmdb-logo {
   height: 5em;
+}
+
+.by-me {
+  color: white;
+}
+
+.by-me:hover {
+  text-decoration: none;
+  color: blue;
 }
